Circulatiry project doone. It was fun.

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -189,7 +189,7 @@
 			*/
 			function handleBoxClick() {
 			
-			//Code that used to be here is now changed to the function changeTextClick... No comments
+			//Code that used to be here is now changed to the function changeTextClick... No comments why...
 			
 			};
 
